docs-archive/apache-airflow-providers-zendesk/4.9.0/_sources/_api/airflow/providers/zendesk/hooks/zendesk/index.rst.txt
airflow.providers.zendesk.hooks.zendesk
=======================================

.. py:module:: airflow.providers.zendesk.hooks.zendesk


Classes
-------

.. autoapisummary::

   airflow.providers.zendesk.hooks.zendesk.ZendeskHook


Module Contents
---------------

.. py:class:: ZendeskHook(zendesk_conn_id = default_conn_name)

   Bases: :py:obj:`airflow.hooks.base.BaseHook`


   Interact with Zendesk. This hook uses the Zendesk conn_id.

   :param zendesk_conn_id: The Airflow connection used for Zendesk credentials.


   .. py:attribute:: conn_name_attr
      :value: 'zendesk_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'zendesk_default'



   .. py:attribute:: conn_type
      :value: 'zendesk'



   .. py:attribute:: hook_name
      :value: 'Zendesk'



   .. py:method:: get_ui_field_behaviour()
      :classmethod:



   .. py:attribute:: zendesk_conn_id
      :value: 'zendesk_default'



   .. py:attribute:: base_api
      :type:  zenpy.lib.api.BaseApi | None
      :value: None



   .. py:attribute:: zenpy_client


   .. py:attribute:: get


   .. py:method:: get_conn()

      Get the underlying Zenpy client.

      :return: zenpy.Zenpy client.



   .. py:method:: get_ticket(ticket_id)

      Retrieve ticket.

      :return: Ticket object retrieved.



   .. py:method:: search_tickets(**kwargs)

      Search tickets.

      :param kwargs: (optional) Search fields given to the zenpy search method.
      :return: SearchResultGenerator of Ticket objects.



   .. py:method:: create_tickets(tickets, **kwargs)

      Create tickets.

      :param tickets: Ticket or List of Ticket to create.
      :param kwargs: (optional) Additional fields given to the zenpy create method.
      :return: A TicketAudit object containing information about the Ticket created.
          When sending bulk request, returns a JobStatus object.



   .. py:method:: update_tickets(tickets, **kwargs)

      Update tickets.

      :param tickets: Updated Ticket or List of Ticket object to update.
      :param kwargs: (optional) Additional fields given to the zenpy update method.
      :return: A TicketAudit object containing information about the Ticket updated.
          When sending bulk request, returns a JobStatus object.



   .. py:method:: delete_tickets(tickets, **kwargs)

      Delete tickets, returns nothing on success and raises APIException on failure.

      :param tickets: Ticket or List of Ticket to delete.
      :param kwargs: (optional) Additional fields given to the zenpy delete method.
      :return:



